# delta-test

./: .gitignore  README.en.md  README.md  docker-compose.middleware.yml
.trae/: .ignore  settings.json
.trae/rules/: project-constraints.md
.trae/skills/dev-knowledge-base/: SKILL.md  agent.md  architecture.md  code-standards.md  database-design.md  dev-workflow.md  improvements.md  key-capabilities.md  performance.md  security.md  tech-stack.md
.trae/skills/project-specifications/: SKILL.md  code-standards.md  improvements.md  index.md  key-capabilities.md  performance.md  security.md  tech-stack.md
.trae/skills/项目规范/: SKILL.md
delta-test-ai/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
delta-test-ai/app/: main.py
delta-test-ai/app/api/: case_generation.py  health.py  risk_assessment.py  root_cause.py  summary.py
delta-test-ai/app/core/: config.py  llm.py  logging.py
delta-test-ai/app/models/: enums.py  requests.py  response.py
delta-test-ai/app/prompts/: case_generation.py  risk_assessment.py  root_cause.py  summary.py
delta-test-ai/app/services/: case_gen_service.py  embedding_service.py  risk_service.py  root_cause_service.py  summary_service.py
delta-test-ai/tests/: conftest.py  test_health.py  test_risk_assessment.py
delta-test-engine/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py
delta-test-engine/include/: bridge.h  dependency_graph.h  diff_engine.h  grpc_server.h  impact_analyzer.h
delta-test-engine/src/: bridge.c  dependency_graph.c  diff_engine.c  grpc_server.cpp  impact_analyzer.c  main.cpp
delta-test-engine/test/: CMakeLists.txt  test_diff_engine.c  test_grpc_server.cpp  test_impact_analyzer.c
delta-test-server/: pom.xml
delta-test-server/delta-test-admin/: pom.xml
delta-test-server/delta-test-admin/src/main/java/com/dwl/: DeltaTestApplication.java
delta-test-server/delta-test-admin/src/main/resources/: application-dev.yml  application-prod.yml  application.yml  logback-spring.xml  openapi.json
delta-test-server/delta-test-admin/src/main/resources/db/migration/: V1__create_all_tables.sql
delta-test-server/delta-test-ai-client/: pom.xml
delta-test-server/delta-test-ai-client/src/main/java/com/dwl/ai/client/: AiServiceClient.java
delta-test-server/delta-test-ai-client/src/main/java/com/dwl/ai/config/: AiServiceConfig.java
delta-test-server/delta-test-ai-client/src/main/java/com/dwl/ai/model/: AiResponse.java
delta-test-server/delta-test-ai-client/src/test/java/com/dwl/ai/client/: AiServiceClientTest.java
delta-test-server/delta-test-ai-client/src/test/java/com/dwl/ai/config/: AiServiceConfigTest.java
delta-test-server/delta-test-ai-client/src/test/java/com/dwl/ai/model/: AiResponseTest.java
delta-test-server/delta-test-common/: pom.xml
delta-test-server/delta-test-common/src/main/java/com/dwl/common/base/: BaseController.java  BaseEntity.java
delta-test-server/delta-test-common/src/main/java/com/dwl/common/config/: MyBatisPlusMetaObjectHandler.java
delta-test-server/delta-test-common/src/main/java/com/dwl/common/constant/: CommonConstant.java  RedisKeyConstant.java
delta-test-server/delta-test-common/src/main/java/com/dwl/common/enums/: CaseStatus.java  ErrorCode.java  ExecutionStatus.java  RiskLevel.java  SourceType.java  TaskStatus.java  TriggerSource.java
delta-test-server/delta-test-common/src/main/java/com/dwl/common/exception/: BusinessException.java  GlobalExceptionHandler.java
delta-test-server/delta-test-common/src/main/java/com/dwl/common/result/: ErrorCode.java  PageResult.java  R.java
delta-test-server/delta-test-common/src/main/java/com/dwl/common/utils/: JwtUtil.java  SecurityUtil.java
delta-test-server/delta-test-common/src/test/java/com/dwl/common/exception/: BusinessExceptionTest.java  GlobalExceptionHandlerTest.java
delta-test-server/delta-test-dao/: pom.xml
delta-test-server/delta-test-grpc-client/: pom.xml
delta-test-server/delta-test-grpc-client/src/main/proto/: code_analysis.proto
delta-test-server/delta-test-model/: pom.xml
delta-test-server/delta-test-mq/: pom.xml
delta-test-server/delta-test-service/: pom.xml
delta-test-server/delta-test-service/src/main/java/com/dwl/service/: AuthService.java  BusinessLinkService.java  ChangeAnalysisService.java  DefectRecordService.java  GitCommitService.java  PageElementService.java  SysDictDataService.java  SysDictTypeService.java  SysEnvironmentService.java  SysPermissionService.java  SysRepositoryService.java  SysRoleService.java  SysUserService.java  TaskExecutionService.java  TestCaseService.java  TestReportService.java  TestTaskService.java
delta-test-server/delta-test-web/: pom.xml
delta-test-web/: .env  .env.development  .env.production  .gitignore  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
delta-test-web/src/: App.vue  main.ts
delta-test-web/src/api/: auth.ts  health.ts  index.ts  role.ts  types.generated.ts  user.ts
delta-test-web/src/api/__tests__/: auth.test.ts  health.test.ts
delta-test-web/src/assets/styles/: global.less
delta-test-web/src/layouts/: MainLayout.vue
delta-test-web/src/router/: index.ts
delta-test-web/src/stores/: user.ts
delta-test-web/src/stores/__tests__/: user.test.ts
delta-test-web/src/utils/: http.ts
delta-test-web/src/utils/__tests__/: http.test.ts
delta-test-web/src/views/analysis/: index.vue
delta-test-web/src/views/dashboard/: index.vue
delta-test-web/src/views/login/: index.vue
delta-test-web/src/views/report/: index.vue
delta-test-web/src/views/system/user/: index.vue
delta-test-web/src/views/task/: index.vue
delta-test-web/src/views/testcase/: index.vue
document/: C引擎构建问题分析与解决.md  Trae配置体系功能划分文档.md  双模式驱动的Web自动化测试平台.md  变更摘要-M0.2-Vue骨架.md  变更摘要.md  开发步骤设计.md  数据库表关系分析.md  整体架构重梳理：双模式驱动的Web自动化测试平台.md  项目技术栈设计.md
document/archetype/: change-analysis.html  index.html  report-center.html  task-center.html  test-management.html
document/sql/: delta_test_ddl.sql
(+136 files in other folders)
