# ============================================================
# DeltaTest AI 服务项目配置
# DeltaTest AI Service Project Configuration
# ============================================================

[project]
name = "delta-test-ai"
version = "1.0.0a0"
description = "双模式驱动的Web自动化测试平台 AI服务 / DeltaTest Dual-mode Web Automation Testing Platform AI Service"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "DeltaTest" },
]

# ==================== 核心依赖 / Core Dependencies ====================
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
]

# ==================== 开发依赖 / Dev Dependencies ====================
[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "mypy>=1.14.0",
]

# ==================== Ruff 配置 / Ruff Configuration ====================
[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors / pycodestyle 错误
    "W",    # pycodestyle warnings / pycodestyle 警告
    "F",    # pyflakes / 未使用导入等
    "I",    # isort / 导入排序
    "N",    # pep8-naming / 命名规范
    "UP",   # pyupgrade / 语法升级
    "B",    # flake8-bugbear / 常见 Bug
    "SIM",  # flake8-simplify / 代码简化
    "RUF",  # ruff 自身规则 / Ruff-specific rules
]
ignore = [
    "E501",   # 行长度由 formatter 处理 / Line length handled by formatter
    "RUF001", # 中文字符串中包含全角标点 / Fullwidth punctuation in Chinese strings
    "RUF002", # 中文 docstring 中包含全角标点 / Fullwidth punctuation in Chinese docstrings
    "RUF003", # 中文注释中包含全角标点 / Fullwidth punctuation in Chinese comments
    "UP046",  # Pydantic Generic 与 PEP 695 语法不兼容 / Pydantic Generic incompatible with PEP 695 syntax
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ==================== pytest 配置 / pytest Configuration ====================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

# ==================== mypy 配置 / mypy Configuration ====================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# ==================== uv 配置 / uv Configuration ====================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
